# sem5-ds

./: .gitignore  pyproject.toml  requirements.txt  requirements_macos.txt  requirements_win.txt
assets/1/: 1.ipynb  2.ipynb  Линейная алгебра_ сходство текстов и аппроксимация функций.ipynb  Центральная предельная теорема своими руками.ipynb
assets/2/: Задание 2. Анализ датасета о продуктах.ipynb
assets/4/: 2.ipynb
assets/6/: Копия PCA.ipynb  Копия banner_placement.ipynb  Копия visualization.ipynb
assets/Лекция 1. Вводная лекция/: Линейная алгебра_ сходство текстов и аппроксимация функций.ipynb  Центральная предельная теорема своими руками.ipynb
assets/Лекция 2. Введение в анализ данных/: 6 EDA.ipynb  Задание 2. Анализ датасета о продуктах.ipynb
assets/Лекция 3. Линейная регрессия/: Задание 1.ipynb  Задание 2. Сравнение метрик качества бинарной классификации.ipynb
assets/Лекция 4. Отбор признаков и пайплайн обучения/: Задание 1. Корреляция.ipynb  Задание 2.ipynb
work/1/: 1.ipynb  2.ipynb
work/10/: 10_1.ipynb  10_2.ipynb  нейронные сети.ipynb
work/2/: 1.ipynb  2.ipynb  foodmart.products.csv
work/3/: 3.ipynb
work/4/: 4.ipynb  foodmart.sales.csv  pipe.py  test.ipynb  Задание_1_Корреляция.ipynb  Задание_2.ipynb
work/5/: boston.txt  Задание 1. Бэггинг и случайный лес.ipynb  Задание 2. Градиентный бустинг.ipynb
work/6/: PCA.ipynb  banner_placement.ipynb  visualization.ipynb
work/7/: Практическая работа по анализу текста.ipynb
work/8/: Практическая работа по анализу текста.ipynb
work/9/: 9_1.ipynb  train.csv  нейронные сети.ipynb  (+1 more)
(+6 files in other folders)
